# schnelle-umlaute

./: .gitignore  AUR_README.md  INSTALL.md  LICENSE  PKGBUILD  README.md  RELEASE.md  index.html  install.sh  robots.txt  sitemap.xml  uninstall.sh
addon/: CMakeLists.txt  README.md  build.sh  org.fcitx.Fcitx5.Addon.SchnelleUmlaute.metainfo.xml.in
addon/data/: schnelle-umlaute-inputmethod.conf  schnelle-umlaute.conf  schnelle-umlaute.conf.in
addon/src/: schnelle-umlaute.cpp
private/: RELEASE.md
